# cnc_warmup

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: notes.org  readme.org
output/: large_warmup.h  large_warmup_coolant.h  large_warmup_nocoolant.h  medium_warmup.h  new_large_warmup.h  sample.h  small_warmup.h
src/: __init__.py
src/cnc_warmup/: __init__.py  cli.py  models.py  warmup_generator.py
src/cnc_warmup/machines/: large.py  medium.py  small.py
tests/: test_cli.py  test_generator.py
tests/test_machines/: test_large.py  test_medium.py  test_small.py
