[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnc_warmup"
version = "0.0.1"
description = "CNC Warmup Generator for Heidenhain TNC 640 controllers"
readme = "README.md"
authors = [
    {name = "EricControls", email = "kp61dude@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: CAM"
]

dependencies = [
    "numpy>=1.21.0",  # For advanced interpolation calculations
    "python-dateutils~=2.8.2"
]

[project.urls]
Homepage = "https://github.com/EricControls/cnc_warmup"
Repository = "https://github.com/EricControls/cnc_warmup.git"
Changelog = "https://github.com/EricControls/cnc_warmup/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov~=4.1.0",
    "black>=23.9.1",
    "flake8>=6.0.0",
    "mypy>=1.0"
]

docs = ["sphinx>=7.0",
        "sphinx-rtd-theme>=1.0"
]

[project.scripts]
cnc-warmup = "cnc_warmup.cli:main"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --cov=src/cnc_warmup --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.projectile
    | \.org
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
)/
'''